--- a/docs/integration.mdx
+++ b/docs/integration.mdx
@@ -5,7 +5,7 @@ sidebar_label: Integration
 import CodeBlock from '@theme/CodeBlock';
 
 We will calculate the area under the curve $f(x)$ within the bounds $x=a$ and
-$x=b$. We will devide the curve into $n$ trapezoids with width $h=(b-a)/n$. Area
+$x=b$. We will divide the curve into $n$ trapezoids with width $h=(b-a)/n$. Area
 under the curve:
 
 $$
@@ -15,3 +15,6 @@ $$
 import trapezoid from '!!raw-loader!/src/10_trapezoid.f90';
 
 <CodeBlock className="fortran" title="src/10_trapezoid.f90">{trapezoid}</CodeBlock>
+
+Later we will improve this code one we introduce about modules and [procedures](
+/fortran/procedures#numerical-integration-ii).
