--- a/docs/modules.mdx
+++ b/docs/modules.mdx
@@ -13,40 +13,43 @@ import const_module from '!!raw-loader!/src/11_const_module.f90';
 
 Now we write a program that uses the above module:
 
-import circ_area from '!!raw-loader!/src/11.1_circ_area.f90';
+import circ_area from '!!raw-loader!/src/11_circ_area.f90';
 
-<CodeBlock className="fortran" title="src/11.1_circ_area.f90">{circ_area}</CodeBlock>
+<CodeBlock className="fortran" title="src/11_circ_area.f90">{circ_area}</CodeBlock>
 
-The `PRIAVATE` keyword makes sure everything is private otherwise declaired as
-`PUBLIC`. Private variables are accecible only to the module, while public
-variables are accecible to the programs that uses it. There is also `PROTECTED`
-keyword, which allows the variable to be accecible but the value cannot be
+The `PRIVATE` keyword makes sure everything is private otherwise declared as
+`PUBLIC`. Private variables are accessible only to the module, while public
+variables are accessible to the programs that uses it. There is also `PROTECTED`
+keyword, which allows the variable to be accessible but the value cannot be
 modified. Compile and run our module and program:
 ```bash
 gfortran -c 11_const_module.f90
-gfortran 11.1_circ_area.f90 11_const_module.o
+gfortran 11_circ_area.f90 11_const_module.o
 ./a.out
 ```
 
 :::note
 
-Moduels need to be compiled before the prorgram that uses it. If both are placed
-in the same source file, the module should come before the program. Include all
-compiled modules from a directory with `-I` option.
+Modules need to be compiled before the program that uses it. If both are placed
+in the same source file, the module should come before the program. Once the
+module is compiled, it will create `.o` and `.mod` files. When we compile the
+program, we only need to provide the `.o` file for linking, the compiler will
+find the `.mod` files. If the files are on a different directory, specify via
+`-I<dir>` option.
 
 ```bash
-gfortran -I./ 11.1_circ_area.f90
+gfortran -I./ 11_circ_area.f90
 ```
 
 :::
 
 ## USE keyword
-Rename a varialble:
+Rename a variable:
 ```fortran
 use const_module, math_pi => pi
 ```
 
-Use only certain varialbles:
+Use only certain variables:
 ```fortran
 use const_module, only : pi
 use const_module, only : pi, e
