--- a/docs/integration.mdx
+++ b/docs/integration.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Numerical integration: Trapezoidal method"
-sidebar_label: Integration
+sidebar_label: Numerical integration
 ---
 import CodeBlock from '@theme/CodeBlock';
 
@@ -18,3 +18,18 @@ import trapezoid from '!!raw-loader!/src/10_trapezoid.f90';
 
 Later we will improve this code one we introduce about modules and [procedures](
 /fortran/procedures#numerical-integration-ii).
+
+## Numerical integration II
+We will try to improve above numerical integration code. Previously we had the
+integration function hard coded, now we will pass it as argument from the
+calling program and use separate module for the calculation.
+
+First we write our executable code in a module:
+
+import integration_module from '!!raw-loader!/src/14_integration_module.f90';
+
+<CodeBlock className="fortran" title="src/14_integration_module.f90">{integration_module}</CodeBlock>
+
+import integration from '!!raw-loader!/src/14_integration.f90';
+
+<CodeBlock className="fortran" title="src/14_integration.f90">{integration}</CodeBlock>
