Changed raw-loader CodeBlock classnames with language- prefix to syntax hightlight to work, format changes to docusaurus.config.js

--- a/docs/control.mdx
+++ b/docs/control.mdx
@@ -35,13 +35,13 @@ Calculate square root of real positive numbers:
 
 import sq_root from '!!raw-loader!/src/06_sq_root.f90';
 
-<CodeBlock className="fortran" title="src/06_sq_root.f90">{sq_root}</CodeBlock>
+<CodeBlock className="language-fortran" title="src/06_sq_root.f90">{sq_root}</CodeBlock>
 
 ### Multi-way IFs
 
 import multi_way_if from '!!raw-loader!/src/06_multi_way_if.f90';
 
-<CodeBlock className="fortran" title="src/06_multi_way_if.f90">{multi_way_if}</CodeBlock>
+<CodeBlock className="language-fortran" title="src/06_multi_way_if.f90">{multi_way_if}</CodeBlock>
 
 Notice also the `STOP` keyword in above example.
 
@@ -49,4 +49,4 @@ Notice also the `STOP` keyword in above example.
 
 import select_case from '!!raw-loader!/src/06_select_case.f90';
 
-<CodeBlock className="fortran" title="src/06_select_case.f90">{select_case}</CodeBlock>
+<CodeBlock className="language-fortran" title="src/06_select_case.f90">{select_case}</CodeBlock>
