--- a/docs/loop.mdx
+++ b/docs/loop.mdx
@@ -9,7 +9,7 @@ Calculate factorial:
 
 import factorial from '!!raw-loader!/src/07_factorial.f90';
 
-<CodeBlock className="fortran" title="src/07_factorial.f90">{factorial}</CodeBlock>
+<CodeBlock className="language-fortran" title="src/07_factorial.f90">{factorial}</CodeBlock>
 
 We can have a step size in a DO loop with a third parameter:
 ```fortran
@@ -61,4 +61,4 @@ END DO
 
 import print_even_numbers from '!!raw-loader!/src/07_print_even_numbers.f90';
 
-<CodeBlock className="fortran" title="src/07_print_even_numbers.f90">{print_even_numbers}</CodeBlock>
+<CodeBlock className="language-fortran" title="src/07_print_even_numbers.f90">{print_even_numbers}</CodeBlock>
