website: search functionality added and changes to navbar doc menu - Self-hosting katex - codeblock language syntax simplified

--- a/docs/abs-path.mdx
+++ b/docs/abs-path.mdx
@@ -8,4 +8,4 @@ Here is a function to convert filenames to their absolute path:
 
 import get_abs_path from '!!raw-loader!/src/15_get_abs_path.f90';
 
-<CodeBlock className="language-fortran" title="src/15_get_abs_path.f90">{get_abs_path}</CodeBlock>
+<CodeBlock language="fortran" title="src/15_get_abs_path.f90">{get_abs_path}</CodeBlock>
