--- a/docs/basics.mdx
+++ b/docs/basics.mdx
@@ -8,7 +8,7 @@ some user input, performs some arithmetic operations, and returns a result.
 
 import add from '!!raw-loader!/src/01_add.f90';
 
-<CodeBlock className="language-fortran" title="src/01_add.f90">{add}</CodeBlock>
+<CodeBlock language="fortran" title="src/01_add.f90">{add}</CodeBlock>
 
 :::info
 
@@ -31,19 +31,19 @@ Now let's write another simple program that converts centimeter to inches:
 
 import cm2inch from '!!raw-loader!/src/02_cm2inch.f90';
 
-<CodeBlock className="language-fortran" title="src/02_cm2inch.f90">{cm2inch}</CodeBlock>
+<CodeBlock language="fortran" title="src/02_cm2inch.f90">{cm2inch}</CodeBlock>
 
 Calculate the circumference of a circle given the diameter:
 
 import circ from '!!raw-loader!/src/03_circ.f90';
 
-<CodeBlock className="language-fortran" title="src/03_circ.f90">{circ}</CodeBlock>
+<CodeBlock language="fortran" title="src/03_circ.f90">{circ}</CodeBlock>
 
 Formatting output:
 
 import format from '!!raw-loader!/src/04_format.f90';
 
-<CodeBlock className="language-fortran" title="src/04_format.f90">{format}</CodeBlock>
+<CodeBlock language="fortran" title="src/04_format.f90">{format}</CodeBlock>
 
 Example outputs:
 
