--- a/docs/file.mdx
+++ b/docs/file.mdx
@@ -8,7 +8,7 @@ Here we will generate some data and write it to a file:
 
 import file_write from '!!raw-loader!/src/08_file_write.f90';
 
-<CodeBlock className="language-fortran" title="src/08_file_write.f90">{file_write}</CodeBlock>
+<CodeBlock language="fortran" title="src/08_file_write.f90">{file_write}</CodeBlock>
 
 :::info
 
@@ -22,4 +22,4 @@ above example.
 
 import file_read from '!!raw-loader!/src/09_file_read.f90';
 
-<CodeBlock className="language-fortran" title="src/09_file_read.f90">{file_read}</CodeBlock>
+<CodeBlock language="fortran" title="src/09_file_read.f90">{file_read}</CodeBlock>
