website: show line numbers for long codeblocks + replace homepage link with icon in the navbar + add .gitattributes to ignore docusaurus files from language statistics

--- a/docs/integration.mdx
+++ b/docs/integration.mdx
@@ -14,7 +14,7 @@ $$
 
 import trapezoid from '!!raw-loader!/src/10_trapezoid.f90';
 
-<CodeBlock language="fortran" title="src/10_trapezoid.f90">{trapezoid}</CodeBlock>
+<CodeBlock language="fortran" title="src/10_trapezoid.f90" showLineNumbers>{trapezoid}</CodeBlock>
 
 Later we will improve this code one we introduce about modules and [procedures](
 /fortran/procedures#numerical-integration-ii).
@@ -28,8 +28,8 @@ First we write our executable code in a module:
 
 import integration_module from '!!raw-loader!/src/14_integration_module.f90';
 
-<CodeBlock language="fortran" title="src/14_integration_module.f90">{integration_module}</CodeBlock>
+<CodeBlock language="fortran" title="src/14_integration_module.f90" showLineNumbers>{integration_module}</CodeBlock>
 
 import integration from '!!raw-loader!/src/14_integration.f90';
 
-<CodeBlock language="fortran" title="src/14_integration.f90">{integration}</CodeBlock>
+<CodeBlock language="fortran" title="src/14_integration.f90" showLineNumbers>{integration}</CodeBlock>
