--- a/docs/procedures.mdx
+++ b/docs/procedures.mdx
@@ -12,13 +12,13 @@ First we write the subroutines in a module:
 
 import add_module from '!!raw-loader!/src/12_add_module.f90';
 
-<CodeBlock language="fortran" title="src/12_add_module.f90">{add_module}</CodeBlock>
+<CodeBlock language="fortran" title="src/12_add_module.f90" showLineNumbers>{add_module}</CodeBlock>
 
 Now write our program:
 
 import add from '!!raw-loader!/src/12_add.f90';
 
-<CodeBlock language="fortran" title="src/12_add.f90">{add}</CodeBlock>
+<CodeBlock language="fortran" title="src/12_add.f90" showLineNumbers>{add}</CodeBlock>
 
 Compile and execute:
 ```bash
@@ -36,11 +36,11 @@ $$
 
 import function_module from '!!raw-loader!/src/13_function_module.f90';
 
-<CodeBlock language="fortran" title="src/13_function_module.f90">{function_module}</CodeBlock>
+<CodeBlock language="fortran" title="src/13_function_module.f90" showLineNumbers>{function_module}</CodeBlock>
 
 import function_table from '!!raw-loader!/src/13_function_table.f90';
 
-<CodeBlock language="fortran" title="src/13_function_table.f90">{function_table}</CodeBlock>
+<CodeBlock language="fortran" title="src/13_function_table.f90" showLineNumbers>{function_table}</CodeBlock>
 
 Sample output:
 ```fortran
