--- a/docs/blas.mdx
+++ b/docs/blas.mdx
@@ -1,5 +1,5 @@
 ---
-title: Basic Linear Algebra Subroutine
+title: Basic Linear Algebra Subprograms
 sidebar_label: BLAS
 ---
 Install [BLAS](https://netlib.org/blas/) and [LAPACK](
