--- a/docs/types.mdx
+++ b/docs/types.mdx
@@ -8,3 +8,11 @@ import CodeBlock from '@theme/CodeBlock';
 import custom_type from '!!raw-loader!/src/23_custom_type.f90';
 
 <CodeBlock language="fortran" title="src/23_custom_type.f90" showLineNumbers>{custom_type}</CodeBlock>
+
+## Polymorphism
+
+Example of polymorphic object:
+
+import polymorphism from '!!raw-loader!/src/23_polymorphism.f90';
+
+<CodeBlock language="fortran" title="src/23_polymorphism.f90" showLineNumbers>{polymorphism}</CodeBlock>
