chore: upgrade docusaurus to v3 and other related changes

--- a/docs/blas.mdx
+++ b/docs/blas.mdx
@@ -35,6 +35,4 @@ import blas_dgemm from '!!raw-loader!/src/22_blas_dgemm.f90';
 
 ## Resources
 
-- <a target="_blank"
-href={require('/resources/multiplying-matrices-using-dgemm.pdf').default}>
-Multiplying matrices: Intel MKL example</a>
+- <a target="_blank" href={require('/resources/multiplying-matrices-using-dgemm.pdf').default}> Multiplying matrices: Intel MKL example</a>
