--- a/docs/control.mdx
+++ b/docs/control.mdx
@@ -23,10 +23,10 @@ F90 introduced following simplified notation for the relational operators:
 
 Operators | Meaning
 :-------: | :-----------------------
-<   	  | less than
->         | greater than
-<=        | less than or equal to
->=        | greater than or equal to
+&lt;   	  | less than
+&gt;      | greater than
+&lt;=     | less than or equal to
+&gt;=     | greater than or equal to
 ==        | equal to
 /=        | not equal to
 
