--- a/docs/file-io.mdx
+++ b/docs/file-io.mdx
@@ -1,5 +1,5 @@
 ---
-title: File Input / Output
+title: File Input/Output
 sidebar_label: File I/O
 ---
 import CodeBlock from '@theme/CodeBlock';
@@ -46,7 +46,7 @@ import qe_in from '!!raw-loader!/src/30_qe.in';
 
 <CodeBlock language="fortran" title="src/30_qe.in" showLineNumbers>{qe_in}</CodeBlock>
 
-We can read and parse various inputs:
+We can read and parse various inputs following way:
 
 import read_namelist from '!!raw-loader!/src/30_namelist.f90';
 
