--- a/docs/file-io.mdx
+++ b/docs/file-io.mdx
@@ -1,6 +1,7 @@
 ---
 title: File Input/Output
 sidebar_label: File I/O
+keywords: ["namelist", "fortran namelist", "file I/O", "file read write", "file input output"]
 ---
 import CodeBlock from '@theme/CodeBlock';
 
